--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  background-color: #021c1e;
+}
+
+.nav-section {
+  width: 100%;
+  background: #004445;
+  color: #021c1e;
+  margin: 0;
+  height: 5em;
+}
+
+.navbar {
+  margin: 0 40px;
+  display: flex;
+  height: 100%;
+  align-items: center;
+  font-size: 1.5rem;
+  text-decoration: none;
+  list-style: none;
+  justify-content: flex-end;
+  gap: 70px;
+}
+
+.nav-selection {
+  /* background: #2c7873; */
+  background: #6fb98f;
+  align-self: center;
+  justify-content: center;
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 10px;
+  outline: none;
 }
